# Kabak

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/source/: conf.py  documentation.rst  example_minKnapsack.rst  getting_started.rst  index.rst  intro.rst  kabak.algos.covering.rst  kabak.algos.knapsack.rst  kabak.algos.linear_program.rst  kabak.algos.minKnapsack.rst  kabak.algos.rst  kabak.models.base.rst  kabak.models.covering.rst  kabak.models.knapsack.rst  kabak.models.minKnapsack.rst  kabak.models.packing.rst  kabak.models.rst  kabak.rst  kabak.structures.rst  modules.rst  new_algos.rst  new_examples.rst  new_models.rst  references.rst
docs/source/_static/: style.css
kabak/algos/: __init__.py
kabak/algos/covering/: __init__.py  grasp.py  greedy.py  primalDual.py  strengthenedLinear.py
kabak/algos/knapsack/: __init__.py  dynamic_program.py  linear.py  rounding.py
kabak/algos/linearProgram/: __init__.py  ortools.py
kabak/algos/minKnapsack/: __init__.py  dynamic_program.py  greedy.py  primal_dual.py  rounding.py
kabak/algos/setCover/: __init__.py  roundingGeometric.py
kabak/models/: __init__.py  base.py  covering.py  knapsack.py  minKnapsack.py  packing.py
kabak/structures/: __init__.py  graph.py
tests/algorithms/covering/: test_demand_values.py
tests/algorithms/knapsack/: test_dynamic_program.py  test_linear.py  test_rounding.py
tests/algorithms/linear_program/: test_ortools.py
tests/algorithms/minKnapsack/: test_dynamic_program.py  test_greedy.py  test_primal_dual.py  test_rounding.py
