# This setup.cfg file is based on basic content outlined in the link below
# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = Kabak
description = Models and algorithms for covering and packing 
author = Sander Aarts
license = MIT
platforms = unix, linux, osx, cygwin, win32
 
[options]
packages=
    kabak
install_requres = 
    numpy>=1.2
python_requires = >=3.8

zip_safe = no

#[options.packages.find]
#where = src

[pydocstyle]
convention=numpy
add-ignore=D104,D107
